--- a/style.css
+++ b/style.css
@@ -298,7 +298,7 @@
     width: 9em;
     height: 3em;
     border-radius: 30em;
-    font-size: 15px;
+    font-size: 1.2rem;
     font-family: inherit;
     border: none;
     position: relative;
@@ -316,7 +316,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    background-image: linear-gradient(to right, #0fd850 0%, #f9f047 100%);
+    background-image: linear-gradient(to right, #2fa4dd 0%, #cdd6da 100%);
     transition: .5s ease;
     display: block;
     z-index: -1;
