--- a/style.css
+++ b/style.css
@@ -1,327 +1,354 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap');
+.bg-light
+{
+    background-color: #000 !important;
+}
 *
 {
-    color: #333;
+    color: #fafafa;
+    font-family: 'Work Sans', sans-serif;
 }
 :root
 {
+    --white: #fff;
+    --Black: #333;
     --blue: #2fa4dd;
 }
-.uk-sticky 
+.custom-banner-img
 {
-    background: transparent;
+    background-image: url(./img/banner.png);
+    width: 100% !important;
+    height: 600px !important;
+    background-repeat: no-repeat;
 }
-.uk-navbar-container:not(.uk-navbar-transparent) {
-    background: #f7f7f7;
-}
-.uk-navbar-nav>li>a
+.custom-section-bg
 {
-    padding: 0 22px !important;
-    color: #333 !important;
-    font-size: 1.2rem !important;
-    font-family: 'Roboto', sans-serif !important;
+    background-color: rgba(0,0,0,0.8);
+    border-radius: 0px;
 }
-.custom-title-color
+.custom-title
 {
+    font-family: 'Roboto Slab', serif;
     color: var(--blue);
-}
-.card-item {
-    display: flex;
-    flex-direction: column;
-    background-color: #fff;
-    width: 100%;
-    border-radius: 10px;
-    box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);
-    overflow: hidden;
-    transition: transform 0.5s;
-    -webkit-transition: transform 0.5s;
-}
-.card-item:hover {
-    cursor: pointer;
-    transform: scale(1.1);
-    -webkit-transform: scale(1.1);
-}
-.card-item:hover .card-image {
-    opacity: 1;
 }
 /* price card */
-.pricing {
+.custom-price-section
+{
+   background-image: url(./img/price.jpg); 
+   background-repeat: no-repeat;
+   background-size: cover;
+}
+main {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-}
-.pricing .plan {
-    background-color: #fff;
-    padding: 2rem;
-    /* margin: 12px; */
-    border-radius: 10px;
-    text-align: center;
-    transition: 0.3s;
-    cursor: pointer;
-}
-.pricing .plan h2 {
-    font-size: 1.7rem;
-    /* font-weight: 600; */
-    margin-bottom: 12px;
-}
-.pricing .plan .price {
-    margin-bottom: 1rem;
-    font-size: 2.3rem;
-    font-weight: 600;
-}
-.pricing .plan ul.features {
-    list-style-type: none;
-    text-align: left;
-}
-.pricing .plan ul.features li {
-    margin: 8px;
-}
-.pricing .plan ul.features li .fas {
-    margin-right: 4px;
-}
-.pricing .plan ul.features li .fa-check-circle {
-    color: var(--blue);
-}
-.pricing .plan button {
-    border: none;
-    width: 100%;
-    padding: 12px 35px;
-    margin-top: 1rem;
-    background-color: var(--blue);
-    color: #fff;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-}
-.pricing .plan.popular {
-    border: 2px solid var(--blue);
-    position: relative;
-    transform: scale(1.08);
-}
-.pricing .plan.popular span {
-    position: absolute;
-    top: -20px;
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: var(--blue);
-    color: #fff;
-    padding: 4px 20px;
-    font-size: 18px;
-    border-radius: 5px;
-}
-.pricing .plan:hover {
-    box-shadow: 5px 7px 67px -28px rgba(0, 0, 0, 0.37);
-}
-/* grow */
-
-.container {
-    display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-    flex-flow: row wrap;
-    gap: 60px;
-    padding-top: 32px;
-    padding-bottom: 32px;
-}
-.container > * {
-    flex-grow: 1;
-    flex-basis: 0;
-}
-.container .card {
-    min-width: 15rem;
-    max-width: calc(11.5rem + 12vw);
+    flex-wrap: wrap;
+  }
+  
+  .card-basic,
+  .card-premium,
+  .card-standard {
+    margin: 10px;
+    padding: 0 0 0.5rem 0;
+    width: 20rem;
+    background: #fff;
+    color: #444;
+    /* text-align: center; */
     border-radius: 1rem;
-    box-shadow: 4px 4px 16px -2px black;
-    position: relative;
-    transition: all 300ms ease;
-}
-.container .card .ribbon {
-    position: absolute;
-    top: 32px;
-    right: 24px;
-    border-radius: 30px;
-    border-bottom-left-radius: 0;
-    height: 3rem;
-    width: 100%;
-    background-color: rgb(47 164 221 / 80%);
-    box-shadow: 6px 6px 16px -6px black;
-}
-.container .card .ribbon::before, .container .card .ribbon::after {
-    content: '';
-    position: absolute;
-    top: 3rem;
-    width: 24px;
-}
-.container .card .ribbon::before {
-    border-bottom-left-radius: 30px;
-    border-top-left-radius: 30px;
-    background-color:rgb(47 164 221 / 80%);
-    height: 2rem;
-    z-index: 1;
-}
-.container .card .ribbon::after {
-    height: 1rem;
-    background-color: rgb(47 164 221 / 80%);;
-}
-.container .card .ribbon .ribbon-text {
-    position: absolute;
-    top: 50%;
-    left: 24px;
-    width: 100%;
-    transform: translatey(-50%);
-    font-size: 24px;
-    font-weight: bold;
-    color: white;
-    /* text-align: center; */
-}
-.container .card img {
-    display: block;
-    max-width: 100%;
-    aspect-ratio: 1.7777777778;
-    height: auto;
-    object-fit: cover;
-    border-top-left-radius: 1rem;
-    border-top-right-radius: 1rem;
-}
-.container .card .card-info {
-    color: #0d1f2d;
-    background-color: transparent !important;
-}
-.container .card .card-info .card-text {
-    padding: 2rem;
-    line-height: 1.5rem;
-    /* text-align: center; */
-}
-.container .card .card-info a {
-    text-decoration: none;
-    color: #0d1f2d;
+    box-shadow: 0.5rem 0.5rem 1rem rgba(51, 51, 51, 0.2);
+    overflow: hidden;
+    transition: all 0.1ms ease-in-out;
+  }
+  .card-basic:hover,
+  .card-premium:hover,
+  .card-standard:hover {
+    transform: scale(1.02);
+  }
+  
+  .card-header {
+    height: 5rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 0.8rem;
+    padding: 1rem 0;
+    color: var(--Black);
+    clip-path: polygon(0 0, 100% 0%, 100% 85%, 0% 100%);
+  }
+  #custom-title-h1
+  {
+      align-items: center;
+      text-align: center;
+  }
+  
+  .header-basic,
+  .btn-basic {
+    background: linear-gradient(135deg, rgb(0, 119, 238), #06c766);
+  }
+  
+  .header-standard,
+  .btn-standard {
+    background: linear-gradient(135deg, #b202c9, #cf087c);
+  }
+  
+  .header-premium,
+  .btn-premium {
+    background: linear-gradient(135deg, #eea300, #ee5700);
+  }
+  
+  .card-body {
+    color: var(--Black);
+  }
+  .card-body h2 {
+    font-size: 2rem;
+    font-weight: 700;
+    color: var(--Black);
+  }
+  
+  .card-element-container {
+    list-style: none;
+  }
+  .card-element-container .card-element{
+      color: var(--Black);
+      align-items: left !important;
+  }
+  
+  .btn {
+    margin: 0.5rem 0;
+    padding: 0.7rem 1rem;
     outline: none;
-    display: block;
-    margin: 0 auto 16px auto;
-    width: fit-content;
-    text-align: center;
-    border: thin solid #0d1f2d;
-    padding: 8px 16px;
-    border-radius: 4px;
-    transition: background-color 300ms ease, color 300ms ease;
-}
-.container .card .card-info a:hover, .container .card .card-info a:focus {
-    background-color: #0d1f2d;
-    color: #9ea3b0;
-}
-.container .card:hover, .container .card:focus-within {
-    transform: scale(1.05);
-}
-/* price card  blinking*/
-.blink{
-    width:200px;
-    height: 50px;
-    background-color: var(--blue);
-    padding: 15px;  
-    text-align: center;
-    line-height: 50px;
-  }
-  .blink span{
-    font-size: 25px;
-    font-family: cursive;
-    color: white;
-    animation: blink 1s linear infinite;
-  }
-@keyframes blink{
-0%{opacity: 0;}
-50%{opacity: .5;}
-100%{opacity: 1;}
-}
-/* button */
-.button {
-    display: inline-block;
-    padding: 12px 24px;
-    border: 1px solid var(--blue);
-    border-radius: 4px;
-    transition: all 0.2s ease-in;
-    position: relative;
-    overflow: hidden;
-    font-size: 19px;
-    background-color: transparent;
-    color: var(--blue);
-    z-index: 1;
-   }
-   
-   .button:before {
-    content: "";
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%) scaleY(1) scaleX(1.25);
-    top: 100%;
-    width: 140%;
-    height: 180%;
-    background-color: rgba(0, 0, 0, 0.05);
-    border-radius: 50%;
-    display: block;
-    transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
-    z-index: -1;
-   }
-   
-   .button:after {
-    content: "";
-    position: absolute;
-    left: 55%;
-    transform: translateX(-50%) scaleY(1) scaleX(1.45);
-    top: 180%;
-    width: 160%;
-    height: 190%;
-    background-color: var(--blue);
-    border-radius: 50%;
-    display: block;
-    transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
-    z-index: -1;
-   }
-   
-   .button:hover {
-    color: #ffffff;
-    border: 1px solid var(--blue);
-   }
-   
-   .button:hover:before {
-    top: -35%;
-    background-color: var(--blue);
-    transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
-   }
-   
-   .button:hover:after {
-    top: -45%;
-    background-color: var(--blue);
-    transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
-   }
-   /* gallery */
-   .custom-button {
-    width: 9em;
-    height: 3em;
-    border-radius: 30em;
-    font-size: 1.2rem;
-    font-family: inherit;
+    border-radius: 1rem;
+    font-size: 1rem;
+    font-weight: 700;
+    color: #fff;
     border: none;
-    position: relative;
-    overflow: hidden;
-    z-index: 1;
-    box-shadow: 6px 6px 12px #c5c5c5,
-                -6px -6px 12px #ffffff;
-   }
-   
-   .custom-button::before {
-    content: '';
-    width: 0;
-    height: 3em;
-    border-radius: 30em;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-image: linear-gradient(to right, #2fa4dd 0%, #cdd6da 100%);
-    transition: .5s ease;
-    display: block;
-    z-index: -1;
-   }
-   
-   .custom-button:hover::before {
-    width: 9em;
-   }
+    cursor: pointer;
+    transition: all 0.1ms ease-in-out;
+  }
+  
+  .btn:hover {
+    transform: scale(0.95);
+  }
+  
+  .btn:active {
+    transform: scale(1);
+  }
+  
+  .card-element-hidden {
+    display: none;
+  }
+.custom-align-center
+{
+  display: flex;
+  flex-direction: column; 
+  justify-content: center;
+  padding: 4rem;
+  text-align: justify;
+}
+.custom-img-center
+{
+  display: flex; 
+  justify-content: space-around; 
+  align-items: center;
+}
+.custom-img-center img
+{
+  border-radius: 15px;
+}
+@media only screen and (max-width: 600px) {
+  .custom-align-center {
+    padding: 20px 10px;
+    text-align: left;
+  }
+}
+/* gallery */
+#gallery{
+  -webkit-column-count:4;
+  -moz-column-count:4;
+  column-count:4;
+  
+  -webkit-column-gap:20px;
+  -moz-column-gap:20px;
+  column-gap:20px;
+}
+@media (max-width:1200px){
+  #gallery{
+  -webkit-column-count:3;
+  -moz-column-count:3;
+  column-count:3;
+    
+  -webkit-column-gap:20px;
+  -moz-column-gap:20px;
+  column-gap:20px;
+}
+}
+@media (max-width:800px){
+  #gallery{
+  -webkit-column-count:2;
+  -moz-column-count:2;
+  column-count:2;
+    
+  -webkit-column-gap:20px;
+  -moz-column-gap:20px;
+  column-gap:20px;
+}
+}
+@media (max-width:600px){
+  #gallery{
+  -webkit-column-count:1;
+  -moz-column-count:1;
+  column-count:1;
+}  
+}
+#gallery img,#gallery video {
+  width:100%;
+  height:auto;
+  margin: 4% auto;
+  /* box-shadow:-3px 5px 15px #000; */
+  cursor: pointer;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+}
+.modal-img,.model-vid{
+  width:100%;
+  height:auto;
+}
+.modal-body{
+  padding:0px;
+}
+
+.section-padding {
+  position: relative;
+  height: 100vh;
+}
+
+.section-bg {
+  background-image: url(./img/business.png);
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 59%;
+  background-size: cover;
+  /* background-repeat: no-repeat; */
+  background-position: center;
+}
+
+.section-bg:after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  content: "";
+  background: var(--Black);
+  opacity: 0.9;
+}
+
+.contact-form {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.contact-form input,
+.contact-form textarea {
+  width: 100%;
+  border: none;
+  padding: 13px;
+  margin-bottom: 17px;
+  color: #333;
+}
+
+input:focus,
+textarea:focus,
+button:focus {
+  outline: none;
+}
+
+.contact-form input[type="submit"] {
+  width: auto;
+  padding: 15px 30px;
+  color: var(--blue);
+  background: white;
+  font-weight: bold;
+}
+
+.appointment-text {
+  padding-left: 100px;
+  padding-top: 140px;
+}
+
+ul li i {
+  padding-right: 10px;
+  color: var(--Black);
+}
+
+.boxed-btn {
+  padding: 10px 30px;
+  background: var(--Black);
+  color: white;
+  font-weight: bold;
+  border-radius: 5px;
+}
+
+.boxed-btn:hover {
+  color: #000;
+  text-decoration: none;
+}
+
+h2.absolute-text {
+  color: #000;
+  position: absolute;
+  top: 29%;
+  left: -60px;
+  writing-mode: vertical-lr;
+  transform: rotate(-180deg);
+  letter-spacing: 2px;
+
+}
+
+ul {
+  margin: 40px 0;
+}
+
+ul li {
+  margin: 15px 0px;
+}
+
+@media screen and (max-width: 767px) {
+  .section-bg {
+      width: 100%;
+  }
+
+  .appointment-text {
+      padding-left: 0px;
+      padding-top: 140px;
+  }
+
+  h2.absolute-text {
+      color: #000;
+      position: absolute;
+      top: 32px;
+      left: 24px;
+      writing-mode: inherit;
+      transform: none;
+      letter-spacing: 2px;
+  }
+
+}
+@media screen and (max-width: 1024px) and (min-width: 768px){
+  h2.absolute-text {
+      color: var(--Black);
+      position: absolute;
+      top: 32px;
+      left: 24px;
+      writing-mode: inherit;
+      transform: none;
+      letter-spacing: 2px;
+  }
+  .appointment-text {
+      padding-left: 20px;
+      padding-top: 140px;
+  }
+
+}
