--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@
    background-size: cover;
 }
 main {
-    display: flex;
+    display: flex !important;
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
