--- a/style.css
+++ b/style.css
@@ -25,6 +25,8 @@
   align-items: center;
   justify-content: center;
   text-align: center;
+  background-position: center;
+  background-size: cover;
 }
 .custom-section-bg {
   background-color: rgba(0, 0, 0, 0.8);
