--- a/style.css
+++ b/style.css
@@ -238,7 +238,44 @@ main {
   padding-top: 20px;
   /* padding-bottom: 100px; */
 }
+/* contact popup */
 
+.contact-forms input,
+.contact-forms textarea {
+  width: 100%;
+  /* border: none; */
+  padding: 13px;
+  margin-bottom: 17px;
+  color: #333;
+}
+
+.order-btn {
+  letter-spacing: 1px;
+  z-index: 2;  
+  font-weight: 700;
+  color: var(--blue);
+  border: 3px solid var(--blue);
+  background: #fff;
+  border-radius: 5px;
+  width: 160px;
+  height: 50px;
+  cursor: pointer;
+  transition: all 0.4s ease;
+}
+
+.order-btn:hover {
+  background: var(--blue);
+  color: #fff;
+}
+.custom-whatsapp
+{
+  position: fixed;
+  bottom: 0;
+  margin: 10px;
+  z-index: 9999;
+  width: 70px;
+  height: 70px;
+}
 .contact-form input,
 .contact-form textarea {
   width: 100%;
@@ -391,7 +428,7 @@ h2.absolute-text {
 }
 
 .pricing-card:hover .pricing-card-header{
-  box-shadow: 0 0 0 19em var(--blue);
+  box-shadow: 0 0 0 20em var(--blue);
 }
 
 .price{
@@ -420,4 +457,24 @@ h2.absolute-text {
   .pricing-card{
     flex: 50%;
   }
+}
+/* enquire button */
+
+.buttonLink {
+  color: #275d8b;
+}
+
+.verticalButton {
+  padding:0px 0px 0px 0px;
+  width: 250px;
+  height:40px;
+  background:var(--blue);
+  border-radius: 0px 0px 5px 5px;
+  -moz-transform:rotate(90deg);
+  -ms-transform:rotate(90deg);
+  -o-transform:rotate(90deg);
+  -webkit-transform:rotate(90deg);
+  position: fixed;
+  right: -105px;
+  top: 300px;
 }
